[gd_scene load_steps=2 format=3 uid="uid://pw2m0y6ndhbt"]

[ext_resource type="Script" uid="uid://dirw5ncpyfya" path="res://Source/UI/Planner.gd" id="1_aiy8a"]

[node name="Planner" type="VBoxContainer"]
offset_right = 360.0
offset_bottom = 105.0
script = ExtResource("1_aiy8a")

[node name="PlannerLabel" type="Label" parent="."]
layout_mode = 2
text = "PLANNER"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NowLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Now"

[node name="MaxTime" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Set max value of slider"
min_value = 1.0
value = 1.0
prefix = "+"
suffix = "hr"

[node name="TimeSlider" type="HSlider" parent="."]
layout_mode = 2
tooltip_text = "Estimate future positions of units"
focus_mode = 0
max_value = 1.0
step = 0.0

[node name="TimeReadout" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1

[connection signal="value_changed" from="HBoxContainer/MaxTime" to="." method="_on_max_time_value_changed"]
[connection signal="value_changed" from="TimeSlider" to="." method="_on_time_slider_value_changed"]
